# fx-technical-case

./: .gitignore  Design_note.md  README.md  default_template.env  main.py  pyproject.toml  requirements.txt
cloud_functions/fetch_ecb_data_for_ytd/: main.py
cloud_functions/utils/: commons.py
terraform/gcp/: main.tf  vars.tf  versions.tf
