[project]
name = "fx-technical-case"
version = "0.1.0"
description = ""
authors = [
    {name = "franqv[f.quintana.velasco@gmail.com]"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "google-cloud-bigquery (>=3.38.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "google-auth (>=2.43.0,<3.0.0)",
    "functions-framework (>=3.9.2,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "pandas-gbq (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"